2006-03-02 tommi@tntnet.org

  - new logging-parameter flushdelay, which speeds up logging
    by starting a backgroundthread, which flushes asynchronous

2005-01-20 tommi@tntnet.org

  - thread-classes simplified and demo improved
  - output of log-messages speed-optimized

2005-12-12 tommi@tntnet.org

  - improved error-checking in network-classes
  - logging integrated into base-lib (no libcxxtools-log.so any more)

2005-11-08 tommi@tntnet.org

  - cxxtools::Thread split into cxxtools::AttachedThread and cxxtools::DetachedThread

2005-11-04 tommi@tntnet.org

  - bugfix in cxxtools::HttpRequest

2005-09-18 tommi@tntnet.org

  - udp-reply

2005-07-19 tommi@tntnet.org

  - new namingconventions: classfiles start with capitals, methods with lower
    case
  - support for udp-messages (cxxtools::UdpSender, cxxtools::UdpReceiver)
  - logging through udp

2005-07-15 tommi@tntnet.org

  - fixed some method-names to conform common naming convetions

2005-06-18 tommi@tntnet.org

  - version 1.3.1 released
  - fixed copy-constructor for query_params

2005-01-29 tommi@tntnet.org

  - version 1.3.0 released
  - modified timeout-handling in tcpstream
  - simple http-client added
  - cxxtools::Condition is not derived from cxxtools::Thread any more

2005-01-05 tommi@tntnet.org

  - version 1.2.3 released
  - missing errno.h in iconvstream.cpp added
  - support in cxxtools::arg for multiple alternative switches
    in a single arg-variable (set-method)
  - use gethostbyname to determine address to listen, so you can
    specify a hostname as a listener-parameter

2004-12-14 tommi@tntnet.org

  - version 1.2.2 released
  - bug fixed: cxxtools::arg does not find user-specific inputstreamoperators
  - support for log4cxx
  - logging-library selectable at build-time

2004-12-03 tommi@tntnet.org

  - version 1.2.1 released
  - removed obsolete timeclass.cpp
  - switched dl-classes to libtool for better portability
  - skip iconvstream if libiconv is not installed