@@ -6,5 +6,6 @@ logger.log.nss=DEBUG
 logger.bench=INFO
 File=log.log
 MaxFileSize=1MB
-MaxBackupIndex=3
+MaxBackupIndex=10
 #Host=127.0.0.1:1234
+flushdelay=100
